# gd32e50x-cmake-project-template

./: .gitignore  CMakeLists.txt  arm-none-eabi-gcc.cmake  build.bat  generate.bat
Firmware/GD32E50x/: CMakeLists.txt
Firmware/GD32E50x/Examples/ADC/ADC0_ADC1_regular_parallel/: main.c  readme.txt  systick.c
Firmware/GD32E50x/Examples/ADC/ADC0_SHRTIMER_trigger_inserted_channel/: main.c  readme.txt
Firmware/GD32E50x/Examples/ADC/ADC0_channel_differential_mode/: main.c  readme.txt  systick.c  systick.h
Firmware/GD32E50x/Examples/ADC/ADC0_regular_channel_discontinuous_mode/: main.c  readme.txt
Firmware/GD32E50x/Examples/ADC/ADC0_regular_channel_with_DMA/: main.c  readme.txt
Firmware/GD32E50x/Examples/ADC/ADC0_software_trigger_regular_channel_polling/: main.c  readme.txt
Firmware/GD32E50x/Examples/ADC/ADC0_temperature_Vref/: main.c  readme.txt
Firmware/GD32E50x/Examples/ADC/ADC0_timer_trigger_inserted_channel/: gd32e50x_it.c  main.c  readme.txt
Firmware/GD32E50x/Examples/ADC/ADC1_analog_watchdog_0/: gd32e50x_it.c  main.c  readme.txt
Firmware/GD32E50x/GD32E50x_standard_peripheral/Include/: gd32e50x_adc.h  gd32e50x_bkp.h  gd32e50x_can.h  gd32e50x_cmp.h  gd32e50x_crc.h  gd32e50x_ctc.h  gd32e50x_dac.h  gd32e50x_dbg.h  gd32e50x_dma.h  gd32e50x_enet.h  gd32e50x_exmc.h  gd32e50x_exti.h  gd32e50x_fmc.h  gd32e50x_fwdgt.h  gd32e50x_gpio.h  gd32e50x_i2c.h  gd32e50x_misc.h  gd32e50x_pmu.h  gd32e50x_rcu.h  gd32e50x_rtc.h  gd32e50x_sdio.h  gd32e50x_shrtimer.h  gd32e50x_spi.h  gd32e50x_sqpi.h  gd32e50x_timer.h  gd32e50x_tmu.h  gd32e50x_usart.h  gd32e50x_wwdgt.h
Firmware/GD32E50x/Template/: gd32e50x_it.c  main.c  main.h  readme.txt
Firmware/GD32E50x/Template/IAR_project/: Project.ewd  Project.ewp  Project.ewt
Firmware/GD32F1x0/: CMakeLists.txt
Firmware/GD32F1x0/StartupFile/GCC/: startup_gd32f1x0.S
Firmware/GD32F1x0/Template/: gd32f1x0_it.c  main.c  main.h  readme.txt
Firmware/GD32F1x0/Template/IAR_project/: Project.ewp  Project.ewt
Firmware/GD32F1x0/Utilities/: gd32f150r_audio_codec.c  gd32f150r_audio_codec.h  gd32f1x0r_eval.c  gd32f1x0r_eval.h
Firmware/LinkerScripts/: GD32E507ZETX_FLASH.ld  GD32F130F6P6TR.ld
PyOCDConfig/: pyocd.yaml
Src/: gd32e50x_it.h  gd32e50x_libopt.h  lcd_font.h  main.c  main.h  systick.h
(+1117 files in other folders)
